--- a/hpc/nways/nways_labs/nways_MD/English/Fortran/jupyter_notebook/cudafortran/nways_cuda.ipynb
+++ b/hpc/nways/nways_labs/nways_MD/English/Fortran/jupyter_notebook/cudafortran/nways_cuda.ipynb
@@ -421,16 +421,12 @@
    "source": [
     "Let's checkout the profiler's report. [Download the profiler output](../../source_code/cudafortran/rdf_cuda.qdrep) and open it via the GUI. Have a look at the example expected profiler report below:\n",
     "\n",
-    "<img src=\"../images/cuda_profile_timeline.png\">\n",
+    "<img src=\"../images/cuda_profile_timeline.jpg\">\n",
     "\n",
-    "Nsight systems is capable of capturing information about CUDA execution in the profiled process.CUDA API row in the timeline view shows traces of CUDA Runtime and Driver calls made by application. If you hover your mouse over it, you will see more information about the calls.\n",
-    "\n",
-    "<img src=\"../images/cuda_profile_api.png\">\n",
+    "Nsight systems is capable of capturing information about CUDA execution in the profiled process.CUDA API row in the timeline view shows traces of CUDA Runtime and Driver calls made by application. As shown in image above, if you hover your mouse over it, you will see more information about the calls.\n",
     "\n",
     "\n",
-    "Near the bottom of the timeline row tree, the GPU node will appear and contain a CUDA node. Within the CUDA node, each CUDA context used within the process will be shown along with its corresponding CUDA streams. Streams will contain memory operations and kernel launches on the GPU. In the example screenshot below, you can see Kernel launches are represented by blue, while memory transfers are displayed in red and green. In this example screenshot, unified memory was used rather than explicitly transferring data between CPU and GPU.\n",
-    "\n",
-    "<img src=\"../images/cuda_profile.png\">\n",
+    "Near the bottom of the timeline row tree, the GPU node will appear and contain a CUDA node. Within the CUDA node, each CUDA context used within the process will be shown along with its corresponding CUDA streams. Streams will contain memory operations and kernel launches on the GPU. In this example screenshot, unified memory was used rather than explicitly transferring data between CPU and GPU.\n",
     "\n",
     "\n",
     "Feel free to checkout the [solution (with managed memory)](../../source_code/cudafortran/SOLUTION/rdf_unified_memory.cu) to help you understand better or compare your implementation with the sample solution.\n",
