--- a/hpc/nways/nways_labs/nways_MD/English/Fortran/jupyter_notebook/openacc/nways_openacc.ipynb
+++ b/hpc/nways/nways_labs/nways_MD/English/Fortran/jupyter_notebook/openacc/nways_openacc.ipynb
@@ -160,7 +160,7 @@
     "         Loop carried backward dependence of g prevents vectorization\n",
     "```\n",
     "\n",
-    "You can see from *Line 99*, it is generating a multicore code `99, Generating Multicore code`. It is very important to inspect the feedback to make sure the compiler is doing what you have asked of it. \n",
+    "You can see from *Line 97*, it is generating a multicore code `97, Generating Multicore code`. It is very important to inspect the feedback to make sure the compiler is doing what you have asked of it. \n",
     "\n",
     "Let's run the executable and validate the output first. Then, profile the code."
    ]
@@ -205,7 +205,7 @@
     "\n",
     "From the timeline view, right click on the nvtx row and click the \"show in events view\". Now you can see the nvtx statistic at the bottom of the window which shows the duration of each range. \n",
     "\n",
-    "<img src=\"../images/nvtx_multicore.png\" width=\"100%\" height=\"100%\">\n",
+    "<img src=\"../images/nvtx_multicore.jpg\" width=\"100%\" height=\"100%\">\n",
     "\n",
     "You can also checkout NVTX statistic from the terminal console once the profiling session ended. From the NVTX statistics, you can see most of the execution time is spend in `Pair_Calculation`. This is a function worth checking out.\n",
     "\n",
@@ -256,7 +256,7 @@
     "\n",
     "- Using `-ta=tesla:managed`, instruct the compiler to build for an NVIDIA Tesla GPU using \"CUDA Managed Memory\"\n",
     "- Using `-Minfo` command-line option, we will see all output from the compiler. In this example, we use `-Minfo=accel` to only see the output corresponding to the accelerator (in this case an NVIDIA GPU).\n",
-    "- The line starting with 97, shows we created a parallel OpenACC loop. This loop is made up of gangs (a grid of blocks in CUDA language) and vector parallelism (threads in CUDA language) with the vector size being 128 per gang. `99, acc loop gang, vector(128) /* blockIdx.x threadIdx.x */`\n",
+    "- The line starting with 97, shows we created a parallel OpenACC loop. This loop is made up of gangs (a grid of blocks in CUDA language) and vector parallelism (threads in CUDA language) with the vector size being 128 per gang. `98, $acc loop gang, vector(128) ! blockidx%x threadidx%x`\n",
     "- The rest of the information concerns data movement. Compiler detected possible need to move data and handled it for us. We will get into this later in this lab.\n",
     "\n",
     "It is very important to inspect the feedback to make sure the compiler is doing what you have asked of it. Now, let's profile the code."
@@ -278,19 +278,19 @@
    "source": [
     "Let's checkout the profiler's report. [Download the profiler output](../../source_code/openacc/rdf_gpu.qdrep) and open it via the GUI. From the \"timeline view\" on the top pane, double click on the \"CUDA\" from the function table on the left and expand it. Zoom in on the timeline and you can see a pattern similar to the screenshot below. The blue boxes are the compute kernels and each of these groupings of kernels is surrounded by green and red/purple boxes (annotated with purple color) representing data movements.\n",
     "\n",
-    "<img src=\"../images/parallel_timeline.png\" width=\"80%\" height=\"80%\">\n",
+    "<img src=\"../images/parallel_timeline.jpg\" width=\"80%\" height=\"80%\">\n",
     "\n",
     "Let's hover your mouse over the CUDA row (underlined with blue color in the below screenshot) and expand it till you see both kernels and memory row. In the below screenshot you can see the NVTX ranges in the \"Events View\" at the bottom of the timeline view window. You can right click on each row from the function table on the left (top window) and click on \"Show in Events View\" and checkout the detail related to that row (similar to the NVTX example in the below screenshot).\n",
     "\n",
-    "<img src=\"../images/parallel_expand.png\" width=\"80%\" height=\"80%\">\n",
+    "<img src=\"../images/parallel_expand.jpg\" width=\"80%\" height=\"80%\">\n",
     "\n",
     "Nsight systems captures information about OpenACC execution in the profiled process. From the timeline tree, each thread that uses OpenACC shows the OpenACC trace information. To view this, you would need to click on the OpenACC API call to see the correlation with the underlying CUDA API calls. If the OpenACC API results in GPU works, that will also be highlighted.\n",
     "\n",
-    "<img src=\"../images/openacc correlation.png\" width=\"80%\" height=\"80%\">\n",
+    "<img src=\"../images/openacc correlation.jpg\" width=\"80%\" height=\"80%\">\n",
     "\n",
     "Moreover, if you hover on a particular OpenACC construct, you can see details about that construct.\n",
     "\n",
-    "<img src=\"../images/openacc_construct.png\" width=\"80%\" height=\"80%\">\n",
+    "<img src=\"../images/openacc_construct.jpg\" width=\"80%\" height=\"80%\">\n",
     "\n",
     "Feel free to checkout the [solution](../../source_code/openacc/SOLUTION/rdf_parallel_directive.f90) to help you understand better."
    ]
@@ -455,7 +455,7 @@
     "        101,   ! blockidx%x threadidx%x auto-collapsed\n",
     "```\n",
     "\n",
-    "We can see that the compiler knows that the loop is parallelisable (`99, Loop is parallelizable`). Note that the loop is parallelized using vector(128) which that the compiler generated instructions for chunk of data of length 128 (vector size being 128 per gang) `99, acc loop gang, vector(128) /* blockIdx.x threadIdx.x */`\n",
+    "We can see that the compiler knows that the loop is parallelisable (`99, Loop is parallelizable`). Note that the loop is parallelized using vector(128) which that the compiler generated instructions for chunk of data of length 128 (vector size being 128 per gang) `99, acc loop gang, vector(128) /* blockIdx%x threadIdx%x */`\n",
     "\n",
     "Let's profile the code now."
    ]
@@ -489,13 +489,22 @@
     "\n",
     "Let's inspect the profiler report from the previous section when we used managed memory with parallel directives. From the \"timeline view\" on the top pane, double click on the \"CUDA\" from the function table on the left and expand it. Zoom in on the timeline and you can see a pattern similar to the screenshot below. The blue boxes are the compute kernels and each of these groupings of kernels is surrounded by purple and teal boxes (annotated with green color) representing data movements.\n",
     "\n",
-    "<img src=\"../images/parallel_unified.png\">\n",
+    "<img src=\"../images/parallel_unified.jpg\">\n",
     "\n",
-    "What this graph is showing us is that we're doing a lot of data movement between GPU and CPU. The compiler feedback we collected earlier tells us quite a bit about data movement too. If we look again at the compiler feedback from earlier, we see the following.\n",
+    "What this graph is showing us is that we're doing data movement between GPU and CPU in the start and end of Pair calculation. The compiler feedback we collected earlier tells us quite a bit about data movement too. If we look again at the compiler feedback from earlier, we see the following.\n",
     "\n",
-    "<img src=\"../images/parallel_data_feedback.png\">\n",
+    "```\n",
+    "rdf:\n",
+    "     97, Generating implicit copyin(y(iconf,:),z(iconf,:),x(iconf,:)) [if not already present]\n",
+    "         Generating implicit copy(g(:)) [if not already present]\n",
+    "     99, Loop is parallelizable\n",
+    "    101, Loop is parallelizable\n",
+    "         Generating Tesla code\n",
+    "         99, !$acc loop gang, vector(128) collapse(2) ! blockidx%x threadidx%x\n",
+    "        101,   ! blockidx%x threadidx%x auto-collapsed\n",
+    "```\n",
     "\n",
-    "The compiler feedback is telling us that the compiler has inserted data movement around our parallel region at line 177 which copies the `d_g2` array in and out of the GPU memory and also copies `d_x`, `d_y` and `d_z` to the GPU memory. \n",
+    "The compiler feedback is telling us that the compiler has inserted data movement around our parallel region at line 97 which copies the `g` array in and out of the GPU memory and also copies `x`, `y` and `z` to the GPU memory. The important part to note here is the word *implicit* which means we have not explicitly added teh data clauses but compiler can observe that the data needs to be copied implicitly. \n",
     "\n",
     "The compiler can only work with the information we provide. It knows we need all those arrays on on the GPU for the accelerated section within the  `pair_gpu` function, but we didn't tell the compiler anything about what happens to the data outside of those sections. Without this knowledge, the compiler has to copy the full arrays to the GPU and back to the CPU for each accelerated section. This is a lot of unnecessary data transfers. \n",
     "\n",
@@ -587,7 +596,7 @@
     "         Loop carried backward dependence of g prevents vectorization\n",
     "```\n",
     "\n",
-    "You can see that on line 95, compiler is generating default present for `g2`, `x`,`z`, and `y` arrays. In other words, it is assuming that data is present on the GPU and it only copies data to the GPU only if the data do not exist.\n",
+    "You can see that on line 95, compiler is generating default present for `g2`, `x`,`z`, and `y` arrays. In other words, it is assuming that data is present on the GPU and it only copies data to the GPU only if the data do not exist. Another key observation also is removal of the work *implicity copy* as we have added the data clauses. Also the data sizes are automatically calculated by the compiler here which we can also addionally give to compiler if needed. \n",
     "\n",
     "\n",
     "Make sure to validate the output by running the executable and validate the output. "
@@ -631,7 +640,7 @@
    "source": [
     "Let's checkout the profiler's report. [Download the profiler output](../../source_code/openacc/rdf_no_managed.qdrep) and open it via the GUI. Have a look at the example expected profiler report below:\n",
     "\n",
-    "<img src=\"../images/parallel_data.png\">\n",
+    "<img src=\"../images/parallel_data.jpg\">\n",
     "\n",
     "Have a look at the data movements annotated with green color and compare it with the previous versions. We have accelerated the application and reduced the execution time by eliminating the unnecessary data transfers between CPU and GPU.\n",
     "\n",
