--- a/hpc/nways/nways_labs/nways_MD/English/Fortran/jupyter_notebook/serial/rdf_overview.ipynb
+++ b/hpc/nways/nways_labs/nways_MD/English/Fortran/jupyter_notebook/serial/rdf_overview.ipynb
@@ -64,13 +64,13 @@
    "source": [
     "Once you run the above cell, you should see the following in the terminal.\n",
     "\n",
-    "<img src=\"../images/serial.png\" width=\"70%\" height=\"70%\">\n",
+    "<img src=\"../images/serial.jpg\" width=\"70%\" height=\"70%\">\n",
     "\n",
     "To view the profiler report, you would need to [Download the profiler output](../../source_code/serial/rdf_serial.qdrep) and open it via the GUI. For more information on how to open the report via the GUI, please checkout the section on [How to view the report](../../../../../profiler/English/jupyter_notebook/profiling-c.ipynb#gui-report). \n",
     "\n",
     "From the timeline view, right click on the nvtx row and click the \"show in events view\". Now you can see the nvtx statistic at the bottom of the window which shows the duration of each range. In the following labs, we will look in to the profiler report in more detail. \n",
     "\n",
-    "<img src=\"../images/nvtx_serial.png\" width=\"100%\" height=\"100%\">\n",
+    "<img src=\"../images/nvtx_serial.jpg\" width=\"100%\" height=\"100%\">\n",
     "\n",
     "The obvious next step is to make **Pair Calculation** algorithm parallel using different approaches to GPU Programming. Please follow the below link and choose one of the approaches to parallelise th serial code.\n",
     "\n",
