Changed Download links , Changed seed from numpy to tensorflow , Added support for A100

--- a/hpc_ai/ai_science_cfd/English/python/jupyter_notebook/CFD/Part3.ipynb
+++ b/hpc_ai/ai_science_cfd/English/python/jupyter_notebook/CFD/Part3.ipynb
@@ -493,8 +493,7 @@
    "source": [
     "#But Training our model from scratch will take a long time\n",
     "#So we will load a partially trained model to speedup the process \n",
-    "K.clear_session()\n",
-    "conv_model = tf.keras.models.load_model(\"conv_model.h5\",custom_objects={'loss_image': loss_image})\n",
+    "conv_model.load_weights(\"conv_model.h5\")\n",
     "\n",
     "history = conv_model.fit(training_dataset, epochs=5, steps_per_epoch=train_batches,\n",
     "          validation_data=validation_dataset, validation_steps=validation_batches, \n",
@@ -726,8 +725,7 @@
    "source": [
     "#But Training our model from scratch will take a long time\n",
     "#So we will load a partially trained model to speedup the process \n",
-    "K.clear_session()\n",
-    "conv_sdf_model = tf.keras.models.load_model(\"conv_sdf_model.h5\",custom_objects={'loss_image': loss_image})\n",
+    "conv_sdf_model.load_weights(\"conv_sdf_model.h5\")\n",
     "\n",
     "history = conv_sdf_model.fit(sdf_training_dataset, epochs=5, steps_per_epoch=train_batches,\n",
     "          validation_data=sdf_validation_dataset, validation_steps=validation_batches)\n",
