--- a/hpc_ai/ai_science_climate/English/python/jupyter_notebook/Tropical_Cyclone_Intensity_Estimation/Competition.ipynb
+++ b/hpc_ai/ai_science_climate/English/python/jupyter_notebook/Tropical_Cyclone_Intensity_Estimation/Competition.ipynb
@@ -201,7 +201,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "np.random.seed(1337)\n",
+    "tf.random.set_seed(1337)\n",
     "\n",
     "import tensorflow.keras\n",
     "from tensorflow.keras.models import Sequential\n",
