--- a/hpc_ai/ai_science_climate/English/python/jupyter_notebook/Tropical_Cyclone_Intensity_Estimation/Manipulation_of_Image_Data_and_Category_Determination_using_Text_Data.ipynb
+++ b/hpc_ai/ai_science_climate/English/python/jupyter_notebook/Tropical_Cyclone_Intensity_Estimation/Manipulation_of_Image_Data_and_Category_Determination_using_Text_Data.ipynb
@@ -472,7 +472,7 @@
     "import os\n",
     "\n",
     "os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"0\"\n",
-    "np.random.seed(1337)\n",
+    "tf.random.set_seed(1337)\n",
     "\n",
     "import tensorflow.keras\n",
     "from tensorflow.keras.models import Sequential\n",
@@ -541,8 +541,7 @@
     "\n",
     "#But Training our model from scratch will take a long time\n",
     "#So we will load a partially trained model to speedup the process \n",
-    "K.clear_session()\n",
-    "model = tf.keras.models.load_model(\"trained_16.h5\",custom_objects={'top2_acc': top2_acc})\n",
+    "model.load_weights(\"trained_16.h5\")\n",
     "\n",
     "# Optimizer\n",
     "sgd = tensorflow.keras.optimizers.SGD(lr=0.001, decay=1e-6, momentum=0.9)\n",
