--- a/hpc/nways/nways_labs/nways_MD/English/Python/jupyter_notebook/numba/numba_RDF.ipynb
+++ b/hpc/nways/nways_labs/nways_MD/English/Python/jupyter_notebook/numba/numba_RDF.ipynb
@@ -125,10 +125,10 @@
     "    ########## Input Details ###########\n",
     "    global xbox, ybox, zbox\n",
     "    inconf = 10\n",
-    "    nbin   =np.int(2000)\n",
-    "    xbox   = np.float(0)\n",
-    "    ybox   =np.float(0)\n",
-    "    zbox   = np.float(0)\n",
+    "    nbin   =np.int32(2000)\n",
+    "    xbox   = np.float32(0)\n",
+    "    ybox   =np.float32(0)\n",
+    "    zbox   = np.float32(0)\n",
     "    \n",
     "    fileDir = os.path.dirname(os.path.realpath('__file__'))\n",
     "    dataRoot = Path(fileDir).parents[1]\n",
@@ -184,16 +184,16 @@
     "    d_g2  = d_g2.copy_to_host() ## numba copy to host\n",
     "    nvtx.RangePop()  # pop for Pair Calculation\n",
     "\n",
-    "    pi = math.acos(np.long(-1.0))\n",
+    "    pi = math.acos(np.int64(-1.0))\n",
     "    rho = (numatm) / (xbox * ybox * zbox)\n",
-    "    norm = (np.long(4.0) * pi * rho) / np.long(3.0)\n",
+    "    norm = (np.int64(4.0) * pi * rho) / np.int64(3.0)\n",
     "    g2 = np.zeros(nbin, dtype=np.float32)\n",
-    "    s2 =np.long(0.0); s2bond = np.long(0.0)\n",
-    "    lngrbond = np.float(0.0)\n",
+    "    s2 =np.int64(0.0); s2bond = np.int64(0.0)\n",
+    "    lngrbond = np.float32(0.0)\n",
     "    box = min(xbox, ybox)\n",
     "    box = min(box, zbox)\n",
-    "    _del =box / (np.long(2.0) * nbin)\n",
-    "    gr = np.float(0.0)\n",
+    "    _del =box / (np.int64(2.0) * nbin)\n",
+    "    gr = np.float32(0.0)\n",
     "    # loop to calculate entropy\n",
     "    nvtx.RangePush(\"Entropy_Calculation\")\n",
     "    for i in range(nbin):\n",
@@ -205,20 +205,20 @@
     "        temp = (i + 0.5) * _del\n",
     "        pairfile.write(str(temp) + \" \" + str(g2[i]) + \"\\n\")\n",
     "\n",
-    "        if r < np.long(2.0):\n",
-    "            gr = np.long(0.0)\n",
+    "        if r < np.int64(2.0):\n",
+    "            gr = np.int64(0.0)\n",
     "        else:\n",
     "            gr = g2[i]\n",
     "        if gr < 1e-5:\n",
-    "            lngr = np.long(0.0)\n",
+    "            lngr = np.int64(0.0)\n",
     "        else:\n",
     "            lngr = math.log(gr)\n",
     "        if g2[i] < 1e-6:\n",
-    "            lngrbond = np.long(0.0)\n",
+    "            lngrbond = np.int64(0.0)\n",
     "        else:\n",
     "            lngrbond = math.log(g2[i])\n",
-    "        s2 = s2 - (np.long(2.0) * pi * rho * ((gr * lngr) - gr + np.long(1.0)) * _del * r * r)\n",
-    "        s2bond = s2bond - np.long(2.0) * pi * rho * ((g2[i] * lngrbond) - g2[i] + np.long(1.0)) * _del * r * r\n",
+    "        s2 = s2 - (np.int64(2.0) * pi * rho * ((gr * lngr) - gr + np.int64(1.0)) * _del * r * r)\n",
+    "        s2bond = s2bond - np.int64(2.0) * pi * rho * ((g2[i] * lngrbond) - g2[i] + np.int64(1.0)) * _del * r * r\n",
     "\n",
     "    nvtx.RangePop()  # pop for entropy Calculation\n",
     "    stwo.writelines(\"s2 value is {}\\n\".format(s2))\n",
@@ -264,7 +264,7 @@
     "\n",
     "---\n",
     "\n",
-    "# <p style=\"text-align:center;border:3px; border-style:solid; border-color:#FF0000  ; padding: 1em\"> <a href=../../../nways_MD_start.ipynb>HOME</a></p>\n",
+    "# <p style=\"text-align:center;border:3px; border-style:solid; border-color:#FF0000  ; padding: 1em\"> <a href=../../../nways_MD_start_python.ipynb>HOME</a></p>\n",
     "\n",
     "---\n",
     "\n",
