--- a/hpc/nways/nways_labs/nways_MD/English/Python/jupyter_notebook/numba/numba_guide.ipynb
+++ b/hpc/nways/nways_labs/nways_MD/English/Python/jupyter_notebook/numba/numba_guide.ipynb
@@ -135,9 +135,9 @@
     "\n",
     "\n",
     "        \n",
-    "array_A = np.arange(N, dtype=np.int)\n",
-    "array_B = np.arange(N, dtype=np.int)\n",
-    "array_out = np.zeros(N, dtype=np.int)\n",
+    "array_A = np.arange(N, dtype=np.int32)\n",
+    "array_B = np.arange(N, dtype=np.int32)\n",
+    "array_out = np.zeros(N, dtype=np.int32)\n",
     "\n",
     "blockpergrid  = N + (threadsperblock - 1) // threadsperblock\n",
     "\n",
@@ -541,7 +541,7 @@
     "\n",
     "---\n",
     "\n",
-    "# <p style=\"text-align:center;border:3px; border-style:solid; border-color:#FF0000  ; padding: 1em\"> <a href=../../../nways_MD_start.ipynb>HOME</a></p>\n",
+    "# <p style=\"text-align:center;border:3px; border-style:solid; border-color:#FF0000  ; padding: 1em\"> <a href=../../../nways_MD_start_python.ipynb>HOME</a></p>\n",
     "\n",
     "---\n",
     "\n",
