--- a/hpc/nways/nways_labs/nways_start.ipynb
+++ b/hpc/nways/nways_labs/nways_start.ipynb
@@ -31,9 +31,10 @@
    "source": [
     "### Tutorial Outline\n",
     "\n",
-    "During this lab, we will be working on porting mini applications in Molecular Simulation (MD) domain to GPUs. You can choose to work with either of this application. Please click on one of the below links to start:\n",
+    "During this lab, we will be working on porting mini applications in Molecular Simulation (MD) domain to GPUs. You can choose to work with either of this application. Please click on one of the below links to start N Ways to GPU Programming in **MD** for:\n",
     "\n",
-    "- N Ways to GPU Programming in [MD](nways_MD/English/nways_MD_start.ipynb) domain\n"
+    "- [ C and Fortran ](nways_MD/English/nways_MD_start.ipynb) domain\n",
+    "- [Python ](nways_MD/English/nways_MD_start_python.ipynb) domain\n"
    ]
   },
   {
